--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ exclude:
   - deploy-key
 
 url: "http://bz.icoach.io"
-title: 'Продвижение Тренеров'
+title: "Продвижение Тренеров"
 author: "Николай Воробьёв"
 description: 'продвигаю тренеров, коучей, консультантов, психологов и других экспертов'
 
